...
            android:id="@+id/tvDialogDaftarKotaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Rencana Kegiatan Kamu Hari ini"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/etPlanning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPlanning"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDialogDaftarKotaTitle" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSaveKeterangan"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:text="Kirim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llcHeaderContainer"/>
...
