...
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAbsenWfh"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_primary_outline_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAbsen"
...

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAbsenWfo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_primary_outline_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clAbsenWfh"
...
